include/flow_ffi.h

// Error codes
typedef enum FlowError {
    FLOW_SUCCESS = 0,
    FLOW_ERROR_INVALID_HANDLE = -1,
    FLOW_ERROR_INVALID_ARGUMENT = -2,
    FLOW_ERROR_NODE_NOT_FOUND = -3,
    FLOW_ERROR_PORT_NOT_FOUND = -4,
    FLOW_ERROR_CONNECTION_FAILED = -5,
    FLOW_ERROR_MODULE_LOAD_FAILED = -6,
    FLOW_ERROR_COMPUTATION_FAILED = -7,
    FLOW_ERROR_OUT_OF_MEMORY = -8,
    FLOW_ERROR_TYPE_MISMATCH = -9,
    FLOW_ERROR_NOT_IMPLEMENTED = -10,
    FLOW_ERROR_UNKNOWN = -999
} FlowError;
typedef struct FlowNodeFactory* FlowNodeFactoryHandle;
typedef struct FlowModule* FlowModuleHandle;
typedef struct FlowNodeData* FlowNodeDataHandle;
// Type conversion checking
FLOW_FFI_EXPORT bool flow_factory_is_convertible(FlowNodeFactoryHandle factory,
                                                 const char* from_type, const char* to_type);
// ============================================================================
// Module Management
// ============================================================================

// Create a module loader
FLOW_FFI_EXPORT FlowModuleHandle flow_module_create(FlowNodeFactoryHandle factory);
// Destroy a module
FLOW_FFI_EXPORT void flow_module_destroy(FlowModuleHandle module);
// Load a module
FLOW_FFI_EXPORT FlowError flow_module_load(FlowModuleHandle module, const char* path);
// Unload a module
FLOW_FFI_EXPORT FlowError flow_module_unload(FlowModuleHandle module);
// Register module nodes
FLOW_FFI_EXPORT FlowError flow_module_register_nodes(FlowModuleHandle module);
// Unregister module nodes
FLOW_FFI_EXPORT FlowError flow_module_unregister_nodes(FlowModuleHandle module);
// Check if module is loaded
FLOW_FFI_EXPORT bool flow_module_is_loaded(FlowModuleHandle module);
// Get module metadata
FLOW_FFI_EXPORT const char* flow_module_get_name(FlowModuleHandle module);
FLOW_FFI_EXPORT const char* flow_module_get_version(FlowModuleHandle module);
FLOW_FFI_EXPORT const char* flow_module_get_author(FlowModuleHandle module);
FLOW_FFI_EXPORT const char* flow_module_get_description(FlowModuleHandle module);
// ============================================================================
// Data Type Management
// ============================================================================

// Create typed data
FLOW_FFI_EXPORT FlowNodeDataHandle flow_data_create_int(int32_t value);
FLOW_FFI_EXPORT FlowNodeDataHandle flow_data_create_double(double value);
FLOW_FFI_EXPORT FlowNodeDataHandle flow_data_create_bool(bool value);
FLOW_FFI_EXPORT FlowNodeDataHandle flow_data_create_string(const char* value);
// Get typed data
FLOW_FFI_EXPORT FlowError flow_data_get_int(FlowNodeDataHandle data, int32_t* value);
// flow_data_get_int64 — for ports declared as int64_t / long / long long
// (e.g. FlowFlutterCudaPreview's "texture_id" output).  Distinct symbol from
// flow_data_get_int because int32_t* cannot hold IDs > 2^31 and we don't want
// silent truncation.
FLOW_FFI_EXPORT FlowError flow_data_get_int64(FlowNodeDataHandle data, int64_t* value);
FLOW_FFI_EXPORT FlowError flow_data_get_double(FlowNodeDataHandle data, double* value);
FLOW_FFI_EXPORT FlowError flow_data_get_bool(FlowNodeDataHandle data, bool* value);
FLOW_FFI_EXPORT FlowError flow_data_get_string(FlowNodeDataHandle data, char** value);
// Get data type
FLOW_FFI_EXPORT const char* flow_data_get_type(FlowNodeDataHandle data);
// Destroy data
FLOW_FFI_EXPORT void flow_data_destroy(FlowNodeDataHandle data);
// Convert data to string representation
FLOW_FFI_EXPORT const char* flow_data_to_string(FlowNodeDataHandle data);
// Pixel format for RAW images.  v1 supports RGBA8888 only; enum is
// provisioned with room for BGRA/RGB/GRAY without breaking the ABI.
typedef enum FlowPixelFormat {
    FLOW_PIXEL_FORMAT_RGBA8888 = 0, // 4 bytes per pixel
} FlowPixelFormat;
// Create an image-bearing FlowNodeData (encoded blob: PNG, JPEG, etc.).
// Bytes are copied into a refcounted shared_ptr<vector<uint8_t>> inside the
// returned handle.  width/height may be -1 ("unknown — resolve at decode").
FLOW_FFI_EXPORT FlowNodeDataHandle flow_data_create_image_encoded(
    const uint8_t* bytes, size_t length,
    int32_t width, int32_t height);
// Create an image-bearing FlowNodeData (raw RGBA8).  Bytes are copied into
// a refcounted shared_ptr<vector<uint8_t>> inside the returned handle.
// row_stride_bytes must be >= width * 4 (tightly packed when ==).
FLOW_FFI_EXPORT FlowNodeDataHandle flow_data_create_image_raw(
    const uint8_t* bytes,
    int32_t width, int32_t height,
    int32_t row_stride_bytes,
    FlowPixelFormat format);