dart_package/lib/src/ffi/bindings_generated.dart


  bool flow_factory_is_convertible(
    FlowNodeFactoryHandle factory1,
    ffi.Pointer<ffi.Char> from_type,
    ffi.Pointer<ffi.Char> to_type,
  ) {
    return _flow_factory_is_convertible(
      factory1,
      from_type,
      to_type,
    );
  }

  late final _flow_factory_is_convertiblePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(FlowNodeFactoryHandle, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('flow_factory_is_convertible');
  late final _flow_factory_is_convertible =
      _flow_factory_is_convertiblePtr.asFunction<
          bool Function(FlowNodeFactoryHandle, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  FlowModuleHandle flow_module_create(
    FlowNodeFactoryHandle factory1,
  ) {
    return _flow_module_create(
      factory1,
    );
  }

  late final _flow_module_createPtr = _lookup<
          ffi.NativeFunction<FlowModuleHandle Function(FlowNodeFactoryHandle)>>(
      'flow_module_create');
  late final _flow_module_create = _flow_module_createPtr
      .asFunction<FlowModuleHandle Function(FlowNodeFactoryHandle)>();

  void flow_module_destroy(
    FlowModuleHandle module,
  ) {
    return _flow_module_destroy(
      module,
    );
  }

  late final _flow_module_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(FlowModuleHandle)>>(
          'flow_module_destroy');
  late final _flow_module_destroy =
      _flow_module_destroyPtr.asFunction<void Function(FlowModuleHandle)>();

  int flow_module_load(
    FlowModuleHandle module,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _flow_module_load(
      module,
      path,
    );
  }

  late final _flow_module_loadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowModuleHandle, ffi.Pointer<ffi.Char>)>>('flow_module_load');
  late final _flow_module_load = _flow_module_loadPtr
      .asFunction<int Function(FlowModuleHandle, ffi.Pointer<ffi.Char>)>();

  int flow_module_unload(
    FlowModuleHandle module,
  ) {
    return _flow_module_unload(
      module,
    );
  }

  late final _flow_module_unloadPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowModuleHandle)>>(
          'flow_module_unload');
  late final _flow_module_unload =
      _flow_module_unloadPtr.asFunction<int Function(FlowModuleHandle)>();

  int flow_module_register_nodes(
    FlowModuleHandle module,
  ) {
    return _flow_module_register_nodes(
      module,
    );
  }

  late final _flow_module_register_nodesPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowModuleHandle)>>(
          'flow_module_register_nodes');
  late final _flow_module_register_nodes = _flow_module_register_nodesPtr
      .asFunction<int Function(FlowModuleHandle)>();

  int flow_module_unregister_nodes(
    FlowModuleHandle module,
  ) {
    return _flow_module_unregister_nodes(
      module,
    );
  }

  late final _flow_module_unregister_nodesPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowModuleHandle)>>(
          'flow_module_unregister_nodes');
  late final _flow_module_unregister_nodes = _flow_module_unregister_nodesPtr
      .asFunction<int Function(FlowModuleHandle)>();

  bool flow_module_is_loaded(
    FlowModuleHandle module,
  ) {
    return _flow_module_is_loaded(
      module,
    );
  }

  late final _flow_module_is_loadedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(FlowModuleHandle)>>(
          'flow_module_is_loaded');
  late final _flow_module_is_loaded =
      _flow_module_is_loadedPtr.asFunction<bool Function(FlowModuleHandle)>();

  ffi.Pointer<ffi.Char> flow_module_get_name(
    FlowModuleHandle module,
  ) {
    return _flow_module_get_name(
      module,
    );
  }

  late final _flow_module_get_namePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FlowModuleHandle)>>(
      'flow_module_get_name');
  late final _flow_module_get_name = _flow_module_get_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowModuleHandle)>();

  ffi.Pointer<ffi.Char> flow_module_get_version(
    FlowModuleHandle module,
  ) {
    return _flow_module_get_version(
      module,
    );
  }

  late final _flow_module_get_versionPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FlowModuleHandle)>>(
      'flow_module_get_version');
  late final _flow_module_get_version = _flow_module_get_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowModuleHandle)>();

  ffi.Pointer<ffi.Char> flow_module_get_author(
    FlowModuleHandle module,
  ) {
    return _flow_module_get_author(
      module,
    );
  }

  late final _flow_module_get_authorPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FlowModuleHandle)>>(
      'flow_module_get_author');
  late final _flow_module_get_author = _flow_module_get_authorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowModuleHandle)>();

  ffi.Pointer<ffi.Char> flow_module_get_description(
    FlowModuleHandle module,
  ) {
    return _flow_module_get_description(
      module,
    );
  }

  late final _flow_module_get_descriptionPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FlowModuleHandle)>>(
      'flow_module_get_description');
  late final _flow_module_get_description = _flow_module_get_descriptionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowModuleHandle)>();

  FlowNodeDataHandle flow_data_create_int(
    int value,
  ) {
    return _flow_data_create_int(
      value,
    );
  }

  late final _flow_data_create_intPtr =
      _lookup<ffi.NativeFunction<FlowNodeDataHandle Function(ffi.Int32)>>(
          'flow_data_create_int');
  late final _flow_data_create_int =
      _flow_data_create_intPtr.asFunction<FlowNodeDataHandle Function(int)>();

  FlowNodeDataHandle flow_data_create_double(
    double value,
  ) {
    return _flow_data_create_double(
      value,
    );
  }

  late final _flow_data_create_doublePtr =
      _lookup<ffi.NativeFunction<FlowNodeDataHandle Function(ffi.Double)>>(
          'flow_data_create_double');
  late final _flow_data_create_double = _flow_data_create_doublePtr
      .asFunction<FlowNodeDataHandle Function(double)>();

  FlowNodeDataHandle flow_data_create_bool(
    bool value,
  ) {
    return _flow_data_create_bool(
      value,
    );
  }

  late final _flow_data_create_boolPtr =
      _lookup<ffi.NativeFunction<FlowNodeDataHandle Function(ffi.Bool)>>(
          'flow_data_create_bool');
  late final _flow_data_create_bool =
      _flow_data_create_boolPtr.asFunction<FlowNodeDataHandle Function(bool)>();

  FlowNodeDataHandle flow_data_create_string(
    ffi.Pointer<ffi.Char> value,
  ) {
    return _flow_data_create_string(
      value,
    );
  }

  late final _flow_data_create_stringPtr = _lookup<
          ffi
          .NativeFunction<FlowNodeDataHandle Function(ffi.Pointer<ffi.Char>)>>(
      'flow_data_create_string');
  late final _flow_data_create_string = _flow_data_create_stringPtr
      .asFunction<FlowNodeDataHandle Function(ffi.Pointer<ffi.Char>)>();

  int flow_data_get_int(
    FlowNodeDataHandle data,
    ffi.Pointer<ffi.Int32> value,
  ) {
    return _flow_data_get_int(
      data,
      value,
    );
  }

  late final _flow_data_get_intPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeDataHandle,
              ffi.Pointer<ffi.Int32>)>>('flow_data_get_int');
  late final _flow_data_get_int = _flow_data_get_intPtr
      .asFunction<int Function(FlowNodeDataHandle, ffi.Pointer<ffi.Int32>)>();

  int flow_data_get_int64(
    FlowNodeDataHandle data,
    ffi.Pointer<ffi.Int64> value,
  ) {
    return _flow_data_get_int64(
      data,
      value,
    );
  }

  late final _flow_data_get_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeDataHandle,
              ffi.Pointer<ffi.Int64>)>>('flow_data_get_int64');
  late final _flow_data_get_int64 = _flow_data_get_int64Ptr
      .asFunction<int Function(FlowNodeDataHandle, ffi.Pointer<ffi.Int64>)>();

  int flow_data_get_double(
    FlowNodeDataHandle data,
    ffi.Pointer<ffi.Double> value,
  ) {
    return _flow_data_get_double(
      data,
      value,
    );
  }

  late final _flow_data_get_doublePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeDataHandle,
              ffi.Pointer<ffi.Double>)>>('flow_data_get_double');
  late final _flow_data_get_double = _flow_data_get_doublePtr
      .asFunction<int Function(FlowNodeDataHandle, ffi.Pointer<ffi.Double>)>();

  int flow_data_get_bool(
    FlowNodeDataHandle data,
    ffi.Pointer<ffi.Bool> value,
  ) {
    return _flow_data_get_bool(
      data,
      value,
    );
  }

  late final _flow_data_get_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeDataHandle,
              ffi.Pointer<ffi.Bool>)>>('flow_data_get_bool');
  late final _flow_data_get_bool = _flow_data_get_boolPtr
      .asFunction<int Function(FlowNodeDataHandle, ffi.Pointer<ffi.Bool>)>();

  int flow_data_get_string(
    FlowNodeDataHandle data,
    ffi.Pointer<ffi.Pointer<ffi.Char>> value,
  ) {
    return _flow_data_get_string(
      data,
      value,
    );
  }

  late final _flow_data_get_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeDataHandle,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('flow_data_get_string');
  late final _flow_data_get_string = _flow_data_get_stringPtr.asFunction<
      int Function(FlowNodeDataHandle, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<ffi.Char> flow_data_get_type(
    FlowNodeDataHandle data,
  ) {
    return _flow_data_get_type(
      data,
    );
  }

  late final _flow_data_get_typePtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(FlowNodeDataHandle)>>(
      'flow_data_get_type');
  late final _flow_data_get_type = _flow_data_get_typePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowNodeDataHandle)>();

  void flow_data_destroy(
    FlowNodeDataHandle data,
  ) {
    return _flow_data_destroy(
      data,
    );
  }

  late final _flow_data_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(FlowNodeDataHandle)>>(
          'flow_data_destroy');
  late final _flow_data_destroy =
      _flow_data_destroyPtr.asFunction<void Function(FlowNodeDataHandle)>();

  ffi.Pointer<ffi.Char> flow_data_to_string(
    FlowNodeDataHandle data,
  ) {
    return _flow_data_to_string(
      data,
    );
  }

  late final _flow_data_to_stringPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(FlowNodeDataHandle)>>(
      'flow_data_to_string');
  late final _flow_data_to_string = _flow_data_to_stringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowNodeDataHandle)>();

  FlowNodeDataHandle flow_data_create_image_encoded(
    ffi.Pointer<ffi.Uint8> bytes,
    int length,
    int width,
    int height,
  ) {
    return _flow_data_create_image_encoded(
      bytes,
      length,
      width,
      height,
    );
  }

  late final _flow_data_create_image_encodedPtr = _lookup<
      ffi.NativeFunction<
          FlowNodeDataHandle Function(ffi.Pointer<ffi.Uint8>, ffi.Size,
              ffi.Int32, ffi.Int32)>>('flow_data_create_image_encoded');
  late final _flow_data_create_image_encoded =
      _flow_data_create_image_encodedPtr.asFunction<
          FlowNodeDataHandle Function(ffi.Pointer<ffi.Uint8>, int, int, int)>();

  FlowNodeDataHandle flow_data_create_image_raw(
    ffi.Pointer<ffi.Uint8> bytes,
    int width,
    int height,
    int row_stride_bytes,
    int format,
  ) {
    return _flow_data_create_image_raw(
      bytes,
      width,
      height,
      row_stride_bytes,
      format,
    );
  }
